include/StTrgApi.h

//-----------------------------------------------------------------------------
//IOPin
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetIOPinDirection(HANDLE hCamera, PDWORD pdwDirection);
BOOL WINAPI StTrg_SetIOPinDirection(HANDLE hCamera, DWORD dwDirection);
BOOL WINAPI StTrg_GetIOPinPolarity(HANDLE hCamera, PDWORD pdwPolarity);
BOOL WINAPI StTrg_SetIOPinPolarity(HANDLE hCamera, DWORD dwPolarity);
BOOL WINAPI StTrg_GetIOPinMode(HANDLE hCamera, BYTE bytePinNo, PDWORD pdwMode);
BOOL WINAPI StTrg_SetIOPinMode(HANDLE hCamera, BYTE bytePinNo, DWORD dwMode);
BOOL WINAPI StTrg_GetIOPinStatus(HANDLE hCamera, PDWORD pdwStatus);
BOOL WINAPI StTrg_SetIOPinStatus(HANDLE hCamera, DWORD dwStatus);
BOOL WINAPI StTrg_GetSwStatus(HANDLE hCamera, PDWORD pdwSwStatus);
BOOL WINAPI StTrg_GetLEDStatus(HANDLE hCamera, PDWORD pdwLEDStatus);
BOOL WINAPI StTrg_SetLEDStatus(HANDLE hCamera, DWORD dwLEDStatus);
//-----------------------------------------------------------------------------
//Timeout
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetTimeOut(HANDLE hCamera, DWORD dwTimeOutType, PDWORD pdwTimeOutMS);
BOOL WINAPI StTrg_SetTimeOut(HANDLE hCamera, DWORD dwTimeOutType, DWORD dwTimeOutMS);
//-----------------------------------------------------------------------------
//Image Acquisition
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_SetRcvMsgWnd(HANDLE hCamera, HWND hWnd);
BOOL WINAPI StTrg_SetRawSnapShotBufferCount(HANDLE hCamera, DWORD dwBufferCount);
BOOL WINAPI StTrg_TakeRawSnapShot(HANDLE hCamera, PBYTE pbyteRaw, DWORD dwBufferSize, PDWORD pdwNumberOfByteTrans, PDWORD pdwFrameNo, DWORD dwMilliseconds);
//-----------------------------------------------------------------------------
//Transfer Control
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_StartTransfer(HANDLE hCamera);
BOOL WINAPI StTrg_StopTransfer(HANDLE hCamera);
//-----------------------------------------------------------------------------
//Noise Reduction
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_NoiseReduction(HANDLE hCamera, DWORD dwNoiseReductionMode, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw);
BOOL WINAPI StTrg_NoiseReduction2(HANDLE hCamera, DWORD dwNoiseReductionMode, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw, WORD wRawBitsPerPixel);
//-----------------------------------------------------------------------------
//White Balance Control
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetWhiteBalanceMode(HANDLE hCamera, PBYTE pbyteWBMode);
BOOL WINAPI StTrg_SetWhiteBalanceMode(HANDLE hCamera, BYTE byteWBMode);
BOOL WINAPI StTrg_GetWhiteBalanceGain(HANDLE hCamera, PWORD pwWBGainR, PWORD pwWBGainGr, PWORD pwWBGainGb, PWORD pwWBGainB);
BOOL WINAPI StTrg_SetWhiteBalanceGain(HANDLE hCamera, WORD wWBGainR, WORD wWBGainGr, WORD wWBGainGb, WORD wWBGainB);
BOOL WINAPI StTrg_WhiteBalance2(HANDLE hCamera, PWORD pwRaw, WORD wRawBitsPerPixel);
BOOL WINAPI StTrg_WhiteBalance(HANDLE hCamera, PBYTE pbyteRaw);
//-----------------------------------------------------------------------------
//Gamma
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetGammaModeEx(HANDLE hCamera, BYTE byteGammaTarget, PBYTE pbyteGammaMode, PWORD pwGamma, PSHORT pshtBrightness, PBYTE pbyteContrast, PBYTE pbyteGammaTable);
BOOL WINAPI StTrg_SetGammaModeEx(HANDLE hCamera, BYTE byteGammaTarget, BYTE byteGammaMode, WORD wGamma, SHORT shtBrightness, BYTE byteContrast, PBYTE pbyteGammaTable);
BOOL WINAPI StTrg_RawColorGamma(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw);
BOOL WINAPI StTrg_BGRGamma(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteBGR);
BOOL WINAPI StTrg_GetGammaModeEx2(HANDLE hCamera, BYTE byteGammaTarget, PBYTE pbyteGammaMode, PWORD pwGamma, PSHORT pshtBrightness, PWORD pwContrast, PWORD pwGammaTable, PWORD pwBitsPerEachColor);
BOOL WINAPI StTrg_SetGammaModeEx2(HANDLE hCamera, BYTE byteGammaTarget, BYTE byteGammaMode, WORD wGamma, SHORT shtBrightness, WORD wContrast, PWORD pwGammaTable, WORD wBitsPerEachColor);
BOOL WINAPI StTrg_RawColorGamma2(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw, WORD wRawBitsPerPixel);
BOOL WINAPI StTrg_BGRGamma2(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteBGR, WORD wBitsPerEachColor);
BOOL WINAPI StTrg_GetCameraGammaValue(HANDLE hCamera, PWORD pwValue);
BOOL WINAPI StTrg_SetCameraGammaValue(HANDLE hCamera, WORD wValue);
//-----------------------------------------------------------------------------
//Mirror Rotation
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_MirrorRotation(BYTE byteMirrorMode, BYTE byteRotationMode, PDWORD pdwWidth, PDWORD pdwHeight, PWORD pwColorArray, PBYTE pbyteRaw);
BOOL WINAPI StTrg_GetMirrorMode(HANDLE hCamera, PBYTE pbyteMirrorMode);
BOOL WINAPI StTrg_SetMirrorMode(HANDLE hCamera, BYTE byteMirrorMode);
//-----------------------------------------------------------------------------
//Color Interpolation
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_ColorInterpolation(DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw, PBYTE pbyteBGR, BYTE byteColorInterpolationMethod, DWORD dwPixelFormat);
BOOL WINAPI StTrg_ColorInterpolation2(DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PWORD pwRaw, PWORD pwBGR, BYTE byteColorInterpolationMethod, DWORD dwPixelFormat, WORD wRawBitsPerPixel);
//-----------------------------------------------------------------------------
//Hue Saturation/Color Matrix
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetHueSaturationMode(HANDLE hCamera, PBYTE pbyteHueSaturationMode, PSHORT pshtHue, PWORD pwSaturation);
BOOL WINAPI StTrg_SetHueSaturationMode(HANDLE hCamera, BYTE byteHueSaturationMode, SHORT shtHue, WORD wSaturation);
BOOL WINAPI StTrg_GetColorMatrix(HANDLE hCamera, PBYTE pbyteColorMatrixMode, PSHORT pshtColorMatrix);
BOOL WINAPI StTrg_SetColorMatrix(HANDLE hCamera, BYTE byteColorMatrixMode, PSHORT pshtColorMatrix);
BOOL WINAPI StTrg_HueSaturationColorMatrix(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteBGR);
BOOL WINAPI StTrg_HueSaturationColorMatrix2(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteBGR, WORD wBitsPerEachColor);
//-----------------------------------------------------------------------------
//Sharpness
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetSharpnessMode(HANDLE hCamera, PBYTE pbyteSharpnessMode, PWORD pwSharpnessGain, PBYTE pbyteSharpnessCoring);
BOOL WINAPI StTrg_SetSharpnessMode(HANDLE hCamera, BYTE byteSharpnessMode, WORD wSharpnessGain, BYTE byteSharpnessCoring);
BOOL WINAPI StTrg_Sharpness2(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteGrayOrBGR, WORD wBitsPerEachColor);
BOOL WINAPI StTrg_Sharpness(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteGrayOrBGR);
BOOL WINAPI StTrg_SaveImageA(DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteGrayOrBGR, PCSTR pszFileName, DWORD dwParam);