include/StTrgAPI.Bas


'------------------------------------------------------------------------------
'IOPin
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetIOPinDirection Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwDirection As Long) As Long
Public Declare Function StTrg_SetIOPinDirection Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwDirection As Long) As Long
Public Declare Function StTrg_GetIOPinPolarity Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwPolarity As Long) As Long
Public Declare Function StTrg_SetIOPinPolarity Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwPolarity As Long) As Long
Public Declare Function StTrg_GetIOPinMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal bytePinNo As Byte, ByRef pdwMode As Long) As Long
Public Declare Function StTrg_SetIOPinMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal bytePinNo As Byte, ByVal dwMode As Long) As Long
Public Declare Function StTrg_GetIOPinStatus Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwStatus As Long) As Long
Public Declare Function StTrg_SetIOPinStatus Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStatus As Long) As Long
Public Declare Function StTrg_GetSwStatus Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwSwStatus As Long) As Long
Public Declare Function StTrg_GetLEDStatus Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pdwLEDStatus As Long) As Long
Public Declare Function StTrg_SetLEDStatus Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwLEDStatus As Long) As Long

'------------------------------------------------------------------------------
'Timeout
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetTimeOut Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwTimeOutType As Long, ByRef pdwTimeOutMS As Long) As Long
Public Declare Function StTrg_SetTimeOut Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwTimeOutType As Long, ByVal dwTimeOutMS As Long) As Long

'------------------------------------------------------------------------------
'Image Acquisition
'------------------------------------------------------------------------------
Public Declare Function StTrg_SetRcvMsgWnd Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal hWnd As Long) As Long
Public Declare Function StTrg_SetRawSnapShotBufferCount Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwBufferCount As Long) As Long
Public Declare Function StTrg_TakeRawSnapShot Lib "StTrgAPI.dll" (ByVal hCamera As Long,  pbyteRaw As Byte, ByVal dwBufferSize As Long, ByRef pdwNumberOfByteTrans As Long, ByRef pdwFrameNo As Long, ByVal dwMilliseconds As Long) As Long

'------------------------------------------------------------------------------
'Transfer Control
'------------------------------------------------------------------------------
Public Declare Function StTrg_StartTransfer Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long
Public Declare Function StTrg_StopTransfer Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long

'------------------------------------------------------------------------------
'Noise Reduction
'------------------------------------------------------------------------------
Public Declare Function StTrg_NoiseReduction2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwNoiseReductionMode As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal wColorArray As Integer,  pbyteRaw As Byte, ByVal wRawBitsPerPixel As Integer) As Long
Public Declare Function StTrg_NoiseReduction Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwNoiseReductionMode As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal wColorArray As Integer,  pbyteRaw As Byte) As Long

'------------------------------------------------------------------------------
'White Balance Control
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetWhiteBalanceMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteWBMode As Byte) As Long
Public Declare Function StTrg_SetWhiteBalanceMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteWBMode As Byte) As Long
Public Declare Function StTrg_GetWhiteBalanceGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwWBGainR As Integer, ByRef pwWBGainGr As Integer, ByRef pwWBGainGb As Integer, ByRef pwWBGainB As Integer) As Long
Public Declare Function StTrg_SetWhiteBalanceGain Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wWBGainR As Integer, ByVal wWBGainGr As Integer, ByVal wWBGainGb As Integer, ByVal wWBGainB As Integer) As Long
Public Declare Function StTrg_WhiteBalance2 Lib "StTrgAPI.dll" (ByVal hCamera As Long,  pwRaw As Integer, ByVal wRawBitsPerPixel As Integer) As Long
Public Declare Function StTrg_WhiteBalance Lib "StTrgAPI.dll" (ByVal hCamera As Long,  pbyteRaw As Byte) As Long

'------------------------------------------------------------------------------
'Gamma
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetGammaModeEx Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteGammaTarget As Byte, ByRef pbyteGammaMode As Byte, ByRef pwGamma As Integer, ByRef pshtBrightness As Integer, ByRef pbyteContrast As Byte,  pbyteGammaTable As Byte) As Long
Public Declare Function StTrg_SetGammaModeEx Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteGammaTarget As Byte, ByVal byteGammaMode As Byte, ByVal wGamma As Integer, ByVal shtBrightness As Integer, ByVal byteContrast As Byte,  pbyteGammaTable As Byte) As Long
Public Declare Function StTrg_RawColorGamma Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal wColorArray As Integer,  pbyteRaw As Byte) As Long
Public Declare Function StTrg_BGRGamma Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteBGR As Byte) As Long
Public Declare Function StTrg_GetGammaModeEx2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteGammaTarget As Byte, ByRef pbyteGammaMode As Byte, ByRef pwGamma As Integer, ByRef pshtBrightness As Integer, ByRef pwContrast As Integer,  pwGammaTable As Integer, ByRef pwBitsPerEachColor As Integer) As Long
Public Declare Function StTrg_SetGammaModeEx2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteGammaTarget As Byte, ByVal byteGammaMode As Byte, ByVal wGamma As Integer, ByVal shtBrightness As Integer, ByVal wContrast As Integer,  pwGammaTable As Integer, ByVal wBitsPerEachColor As Integer) As Long
Public Declare Function StTrg_RawColorGamma2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal wColorArray As Integer,  pbyteRaw As Byte, ByVal wRawBitsPerPixel As Integer) As Long
Public Declare Function StTrg_BGRGamma2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteBGR As Byte, ByVal wBitsPerEachColor As Integer) As Long
Public Declare Function StTrg_GetCameraGammaValue Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwValue As Integer) As Long
Public Declare Function StTrg_SetCameraGammaValue Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wValue As Integer) As Long

'------------------------------------------------------------------------------
'Mirror Rotation
'------------------------------------------------------------------------------
Public Declare Function StTrg_MirrorRotation Lib "StTrgAPI.dll" (ByVal byteMirrorMode As Byte, ByVal byteRotationMode As Byte, ByRef pdwWidth As Long, ByRef pdwHeight As Long, ByRef pwColorArray As Integer,  pbyteRaw As Byte) As Long
Public Declare Function StTrg_GetMirrorMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteMirrorMode As Byte) As Long
Public Declare Function StTrg_SetMirrorMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteMirrorMode As Byte) As Long

'------------------------------------------------------------------------------
'Color Interpolation
'------------------------------------------------------------------------------
Public Declare Function StTrg_ColorInterpolation2 Lib "StTrgAPI.dll" (ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal wColorArray As Integer,  pwRaw As Integer,  pwBGR As Integer, ByVal byteColorInterpolationMethod As Byte, ByVal dwPixelFormat As Long, ByVal wRawBitsPerPixel As Integer) As Long
Public Declare Function StTrg_ColorInterpolation Lib "StTrgAPI.dll" (ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal wColorArray As Integer,  pbyteRaw As Byte,  pbyteBGR As Byte, ByVal byteColorInterpolationMethod As Byte, ByVal dwPixelFormat As Long) As Long

'------------------------------------------------------------------------------
'Hue Saturation/Color Matrix
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetHueSaturationMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteHueSaturationMode As Byte, ByRef pshtHue As Integer, ByRef pwSaturation As Integer) As Long
Public Declare Function StTrg_SetHueSaturationMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteHueSaturationMode As Byte, ByVal shtHue As Integer, ByVal wSaturation As Integer) As Long
Public Declare Function StTrg_GetColorMatrix Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteColorMatrixMode As Byte, ByVal pshtColorMatrix As Integer) As Long
Public Declare Function StTrg_SetColorMatrix Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteColorMatrixMode As Byte, ByVal pshtColorMatrix As Integer) As Long
Public Declare Function StTrg_HueSaturationColorMatrix Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteBGR As Byte) As Long
Public Declare Function StTrg_HueSaturationColorMatrix2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteBGR As Byte, ByVal wBitsPerEachColor As Integer) As Long

'------------------------------------------------------------------------------
'Sharpness
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetSharpnessMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pbyteSharpnessMode As Byte, ByRef pwSharpnessGain As Integer, ByRef pbyteSharpnessCoring As Byte) As Long
Public Declare Function StTrg_SetSharpnessMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal byteSharpnessMode As Byte, ByVal wSharpnessGain As Integer, ByVal byteSharpnessCoring As Byte) As Long
Public Declare Function StTrg_Sharpness2 Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteGrayOrBGR As Byte, ByVal wBitsPerEachColor As Integer) As Long
Public Declare Function StTrg_Sharpness Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteGrayOrBGR As Byte) As Long

'------------------------------------------------------------------------------
'Save Image
'------------------------------------------------------------------------------
Public Declare Function StTrg_SaveImageA Lib "StTrgAPI.dll" (ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long,  pbyteGrayOrBGR As Byte, ByVal pszFileName As String, ByVal dwParam As Long) As Long
